# slugger

./: .gitignore  GOOGLE_SHEETS_SETUP.md  README.md  pyproject.toml
src/slugger/: __init__.py  __main__.py  cli.py  config.py  display.py  gsheet_sync.py  models.py  monitor.py  poller.py  slurm.py  store.py
