[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slugger"
version = "0.1.0"
description = "SLURM job manager with Google Sheets logging"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gspread>=6.0.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
slugger = "slugger.cli:app"
